# CBL-Mariner

./: cgmanifest.json
SPECS-EXTENDED/ripgrep/: ripgrep.spec
SPECS/LICENSES-AND-NOTICES/: LICENSE-EXCEPTIONS.NVIDIA  LICENSES-MAP.md
SPECS/LICENSES-AND-NOTICES/data/: licenses.json
SPECS/bluefield_edac/: bluefield_edac.signatures.json  bluefield_edac.spec
SPECS/clamav/: clamav.spec
SPECS/cloud-hypervisor/: cloud-hypervisor.spec
SPECS/codespell/: codespell.signatures.json  codespell.spec
SPECS/crypto-policies/: crypto-policies.signatures.json  crypto-policies.spec
SPECS/filesystem/: filesystem.spec
SPECS/kernel/: config  config_aarch64  kernel.signatures.json  kernel.spec
SPECS/kernel-hci/: config  kernel-hci.signatures.json  kernel-hci.spec
SPECS/kernel-headers/: kernel-headers.spec
SPECS/krb5/: Add-APIs-for-marshalling-credentials.patch  Add-KCM_OP_GET_CRED_LIST-for-faster-iteration.patch  Add-buildsystem-detection-of-the-OpenSSL-3-KDF-inter.patch  Add-configure-variable-for-default-PKCS-11-module.patch  Add-hostname-canonicalization-helper-to-k5test.py.patch  Allow-kinit-with-keytab-to-defer-canonicalization.patch  Clean-up-context-after-failed-open-in-libkdb5.patch  Clean-up-gssapi_krb5-ccache-name-functions.patch  Fix-KCM-flag-transmission-for-remove_cred.patch  Fix-KCM-retrieval-support-for-sssd.patch  Fix-KDC-null-deref-on-TGS-inner-body-null-server.patch  Fix-k5tls-module-for-OpenSSL-3.patch  Fix-kadmin-k-with-fallback-or-referral-realm.patch  Fix-leaks-on-error-in-kadm5-init-functions.patch  Fix-softpkcs11-build-issues-with-openssl-3.0.patch  Fix-some-principal-realm-canonicalization-cases.patch  Handle-OpenSSL-3-s-providers.patch  Make-KCM-iteration-fallback-work-with-sssd-kcm.patch  Move-some-dejagnu-kadmin-tests-to-Python-tests.patch  Read-GSS-configuration-files-with-mtime-0.patch  Remove-TCL-based-libkadm5-API-tests.patch  Remove-deprecated-OpenSSL-calls-from-softpkcs11.patch  Support-host-based-GSS-initiator-names.patch  Try-harder-to-avoid-password-change-replay-errors.patch  Use-KCM_OP_RETRIEVE-in-KCM-client.patch  Use-OpenSSL-s-KBKDF-and-KRB5KDF-for-deriving-long-te.patch  Use-OpenSSL-s-SSKDF-in-PKINIT-when-available.patch  Use-SHA256-instead-of-SHA1-for-PKINIT-CMS-digest.patch  Use-asan-in-one-of-the-CI-builds.patch  downstream-Allow-krad-UDP-TCP-localhost-connection-with-FIPS.patch  downstream-FIPS-with-PRNG-and-RADIUS-and-MD4.patch  downstream-Remove-3des-support.patch  downstream-SELinux-integration.patch  downstream-fix-debuginfo-with-y.tab.c.patch  downstream-ksu-pam-integration.patch  downstream-netlib-and-dns.patch  kdc.conf  krb5-krad-larger-attrs.patch  krb5-krad-remote.patch  krb5.signatures.json  (+1 more)
SPECS/librsvg2/: librsvg2.spec
SPECS/mozjs/: mozjs.spec
SPECS/mstflint/: mstflint.signatures.json  mstflint.spec
SPECS/node-problem-detector/: node-problem-detector.spec
SPECS/python-pyrad/: python-pyrad.signatures.json  python-pyrad.spec
SPECS/resolv_wrapper/: resolv_wrapper-1.1.7.tar.gz.asc  resolv_wrapper.signatures.json  resolv_wrapper.spec
SPECS/resolv_wrapper/resolv_wrapper-1.1.7/: .gitlab-ci.yml  4.patch  CHANGELOG  CMakeLists.txt  CPackConfig.cmake  ConfigureChecks.cmake  DefineOptions.cmake  README.md  config.h.cmake  resolv_wrapper-config.cmake.in  resolv_wrapper.pc.cmake
SPECS/resolv_wrapper/resolv_wrapper-1.1.7/doc/: CMakeLists.txt  resolv_wrapper.1  resolv_wrapper.1.txt
SPECS/resolv_wrapper/resolv_wrapper-1.1.7/src/: CMakeLists.txt
SPECS/resolv_wrapper/resolv_wrapper-1.1.7/tests/: CMakeLists.txt  dns_srv.c  fake_hosts.in  test_dns_fake.c  test_res_init.c  torture.c
SPECS/rpm-ostree/: rpm-ostree.spec
SPECS/rust/: rust.spec
toolkit/resources/manifests/package/: pkggen_core_aarch64.txt  pkggen_core_x86_64.txt  toolchain_aarch64.txt  toolchain_x86_64.txt
toolkit/tools/imagegen/configuration/: packagerepo.go
toolkit/tools/imagegen/installutils/: installutils.go
